# ot3-firmware

./: .clang-format  .clang-tidy  .codecov.yml  .gitignore  CMakeLists.txt  CMakePresets.json  FindBoost.cmake  FindFlatbuffers.cmake  FindPoetry.cmake  FindSTM32G4xx.cmake  PIPETTES-single-rev1.hex  README.md  generate_header.py  header_generation_utils.py  hex_combine.py  push  run_simulators.sh
bootloader/: CMakeLists.txt
bootloader/core/: CMakeLists.txt  message_handler.c  messages.c  node_id.c  pipette_node_id.c  update_state.c  updater.c  util.c
bootloader/firmware/: CMakeLists.txt  crc32.c  main.c  node_id.c  updater.c  version.c
bootloader/simulator/: CMakeLists.txt  main.cpp  updater.cpp
bootloader/tests/: CMakeLists.txt  test_message_handler.cpp  test_messages.cpp  test_tool_detection.cpp  test_util.cpp
can/: CMakeLists.txt  README.md
can/core/: CMakeLists.txt  can_bus.cpp  messages.cpp  types.cpp
can/firmware/: CMakeLists.txt  hal_can.c  hal_can_bus.cpp  hal_can_message_buffer.cpp  platform_specific_hal_conf.h.in  utils.c  utils.cpp
can/simlib/: CMakeLists.txt  transport.cpp
can/simulator/: CMakeLists.txt  FreeRTOSConfig.h  can_sim.cpp  freertos_idle_timer_task.cpp  main.cpp  rtos_main.cpp  socket_can.cpp
can/tests/: CMakeLists.txt  test_arbitration_id.cpp  test_arbitratration_id.cpp  test_bit_timings.cpp  test_can_buffer_task.cpp  test_can_bus.cpp  test_can_message_buffer.cpp  test_dispatch.cpp  test_messages.cpp  test_parse.cpp
common/core/: CMakeLists.txt  generate_version.cmake  revision.c.in  tool_detection.cpp  version.c.in
common/firmware/: CMakeLists.txt  gpio.c  gpio.cpp  gpio.h  main.cpp  platform_specific_hal.h.in  platform_specific_hal_conf.h.in
common/simulation/: CMakeLists.txt  app_update.cpp  eeprom.cpp  i2c.cpp  i2c_sim.cpp  logging.cpp  spi.cpp  state_manager.cpp  system_hardware.cpp
common/src/: CMakeLists.txt
eeprom/: CMakeLists.txt
eeprom/firmware/: CMakeLists.txt  crc16.c  crc16.cpp
eeprom/tests/: CMakeLists.txt  test_book_accessor.cpp  test_data_rev.cpp  test_dev_data.cpp  test_eeprom_task.cpp  test_hardware_iface.cpp  test_message_handler.cpp  test_revision.cpp  test_serial_number.cpp  test_update_data_rev_task.cpp  test_usage.cpp  test_write_protect.cpp
head/: CMakeLists.txt
head/core/: CMakeLists.txt  can_task.cpp  eefef.cpp  head.cpp  tasks.cpp  tasks_proto.cpp  tasks_rev1.cpp  tool_list.cpp
head/firmware/: CMakeLists.txt  adc.c  adc_task.cpp  can.c  can_task.cpp  eeprom_keys.cpp  freertos_idle_timer_task.cpp  head_motor_hardware.cpp  i2c_setup.c  main.cpp  main_proto.cpp  main_rev1.cpp  motor_hardware.c  motor_hardware.h  motor_hardware_common.c  motor_hardware_proto.c  motor_hardware_rev1.c  pipette_detection_task.cpp  presence_sensing_hardware.cpp  presence_sensor.cpp  spi.c  spi_comms.cpp  step_motor.cpp  stm32g4xx_hal_conf.h  stm32g4xx_it.c  stm32g4xx_it.h  system_stm32g4xx.c  tim7.c  utility_hardware.c  utility_hardware.h  za_board_gpio.c
head/presence-sensing/: CMakeLists.txt
head/simulator/: CMakeLists.txt  FreeRTOSConfig.h  eeprom_keys.cpp  freertos_idle_timer_task.cpp  main.cpp
head/tests/: CMakeLists.txt  test_linear_motion_config.cpp  test_presence_sensing_driver.cpp  test_presence_sensing_queue.cpp  test_voltage_conversion.cpp
header_generation_utils/: pyproject.toml
header_generation_utils/header_generation_utils/: utils.py
hepa-uv/: CMakeLists.txt
hepa-uv/core/: CMakeLists.txt  can_tasks.cpp  tasks.cpp
hepa-uv/firmware/: CMakeLists.txt  FreeRTOSConfig.h  eeprom_keys.cpp  hardware.c  hepa_control_hardware.cpp  hepa_hardware.c  hepauv_hardware.c  i2c_setup.c  led_hardware.c  main_rev1.cpp  stm32g4xx_it.c  stm32g4xx_it.h  system_stm32g4xx.c  timer_hardware.c  timer_hardware.h  utility_gpio.c  uv_hardware.c  uv_hardware.h
hepa-uv/simulator/: CMakeLists.txt  eeprom_keys.cpp  gpio.cpp  interfaces.cpp  main.cpp
hepa-uv/tests/: CMakeLists.txt  test_leds.cpp  test_linear_motion_config.cpp
i2c/: CMakeLists.txt
i2c/firmware/: CMakeLists.txt  i2c.c  i2c_comms.cpp
i2c/simulation/: CMakeLists.txt  i2c_sim.cpp
i2c/tests/: CMakeLists.txt  test_i2c_poll_impl.cpp  test_i2c_poll_task.cpp  test_i2c_poller.cpp  test_i2c_task.cpp  test_i2c_writer.cpp  test_transaction.cpp
ot3_state_manager/: .flake8  CMakeLists.txt  Makefile  Pipfile  README.md  cli.py  generate_state_manager_headers.py  mypy.ini  pyproject.toml  setup.py
ot3_state_manager/ot3_state_manager/: __init__.py  errors.py  hardware.py  measurable_states.py  messages.py  ot3_axis.py  ot3_state.py  ot3_state_manager.py  pipette_model.py  util.py
ot3_state_manager/tests/: __init__.py  conftest.py  test_messages.py  test_ot3_state.py  test_ot3_state_manager.py  udp_client.py
pipettes/: CMakeLists.txt
pipettes/core/: CMakeLists.txt  can_task.cpp  can_task_high_throughput.cpp  can_task_ht.cpp  can_task_low_throughput.cpp  can_task_lt.cpp  can_task_temporary_head.cpp  central_tasks.cpp  configs.cpp  eeprom.cpp  eeprom_task.cpp  gear_motor_tasks.cpp  head_peripheral_tasks.cpp  head_sensor_tasks.cpp  linear_motor_tasks.cpp  motion_controller_task.cpp  motor_driver_task.cpp  move_group_task.cpp  move_status_reporter_task.cpp  peripheral_tasks.cpp  pipette_type_384.cpp  pipette_type_96.cpp  pipette_type_multi.cpp  pipette_type_single.cpp  sensor_tasks.cpp  sensor_tasks_g4.cpp  tasks.cpp  tasks_multiple_i2c.cpp  temporary_head_tasks.cpp
pipettes/firmware/: CMakeLists.txt  FreeRTOSConfig.h  STM32F303RETx_FLASH.ld  can.c  can_task.cpp  eeprom_keys.cpp  freertos_comms_task.cpp  freertos_idle_timer_task.cpp  gdbinit.template  hardware_config.c  hardware_config.h  high_throughput_config.c  i2c.c  i2c_setup.c  spi.c  (+42 more)
presence-sensing/: CMakeLists.txt
python/: .coverage  CMakeLists.txt  Pipfile  README.md  generate_header_wrapper.in  pyproject.toml  setup.py
rear-panel/: CMakeLists.txt  README.md
sensors/: CMakeLists.txt
spi/: CMakeLists.txt
state_manager/: .flake8  CMakeLists.txt  README.md  generate_state_manager_headers.py  pyproject.toml  setup.cfg  state_manager_cli.py
system/: CMakeLists.txt  main.cpp  stm32g4xx_it.c
(+960 files in other folders)
