[tool.poetry]
name = "opentrons_ot3_firmware"
version = "0.1.0"
license = "Apache 2.0"
readme = "README.md"
authors = ["Opentrons <engineering@opentrons.com>"]
repository = "https://github.com/Opentrons/ot3-firmware"
homepage = "www.opentrons.com"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering",
]
keywords = ["robots", "protocols", "synbio", "pcr", "automation", "lab"]
description = "Firmware message bindings for Opentrons ot-3"

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = "==3.10.0.0"

[tool.poetry.dev-dependencies]
pytest = "==6.1.0"
pytest-aiohttp = "==0.3.0"
pytest-cov = "==2.10.1"
mypy = "==0.910"
black = "==21.7b0"
flake8 = "~=3.9.0"
flake8-annotations = "~=2.6.2"
flake8-docstrings = "~=1.6.0"
flake8-noqa = "~=1.1.0"
mock = "~=4.0.2"
types-mock = "==4.0.1"

[tool.poetry.scripts]
opentrons_generate_header = "opentrons_ot3_firmware.scripts.generate_header:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
